--- a/Lab-Pandas-II.ipynb
+++ b/Lab-Pandas-II.ipynb
@@ -14,11 +14,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6d874175",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import datetime\n",
+    "\n",
+    "pd.options.display.max_columns = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "e9856b30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>explicit</th>\n",
+       "      <th>artists</th>\n",
+       "      <th>id_artists</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>time_signature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>35iwgR4jXetI318WEWsa1Q</td>\n",
+       "      <td>Carve</td>\n",
+       "      <td>6</td>\n",
+       "      <td>126903</td>\n",
+       "      <td>0</td>\n",
+       "      <td>['Uli']</td>\n",
+       "      <td>['45tIt06XoI0Iio4LBEVpls']</td>\n",
+       "      <td>1922-02-22</td>\n",
+       "      <td>0.645</td>\n",
+       "      <td>0.445</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-13.338</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.451</td>\n",
+       "      <td>0.674</td>\n",
+       "      <td>0.744</td>\n",
+       "      <td>0.151</td>\n",
+       "      <td>0.127</td>\n",
+       "      <td>104.851</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       id   name  popularity  duration_ms  explicit  artists  \\\n",
+       "0  35iwgR4jXetI318WEWsa1Q  Carve           6       126903         0  ['Uli']   \n",
+       "\n",
+       "                   id_artists release_date  danceability  energy  key  \\\n",
+       "0  ['45tIt06XoI0Iio4LBEVpls']   1922-02-22         0.645   0.445    0   \n",
+       "\n",
+       "   loudness  mode  speechiness  acousticness  instrumentalness  liveness  \\\n",
+       "0   -13.338     1        0.451         0.674             0.744     0.151   \n",
+       "\n",
+       "   valence    tempo  time_signature  \n",
+       "0    0.127  104.851               3  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_spoty = pd.read_csv(r\"/mnt/c/Users/mituc/Ironhack/Curso/IronLabs/lab-pandas-II/data/tracks.csv\", encoding = \"ISO-8859-1\", engine='python')\n",
+    "df_spoty.head(1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,11 +146,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "46f4a59b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                   0\n",
+       "name                71\n",
+       "popularity           0\n",
+       "duration_ms          0\n",
+       "explicit             0\n",
+       "artists              0\n",
+       "id_artists           0\n",
+       "release_date         0\n",
+       "danceability         0\n",
+       "energy               0\n",
+       "key                  0\n",
+       "loudness             0\n",
+       "mode                 0\n",
+       "speechiness          0\n",
+       "acousticness         0\n",
+       "instrumentalness     0\n",
+       "liveness             0\n",
+       "valence              0\n",
+       "tempo                0\n",
+       "time_signature       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_spoty.shape\n",
+    "# Hay 20 columnas y ¡586672 filas!\n",
+    "pd.isnull(df_spoty).sum()\n",
+    "# Tan solo 71 nulos en la columna 'name', ¡y el resto completo!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +224,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "caa284f4f751518ff9267b5ec6e9fe7c4f75b1228d00e1dbeda6e1ad958ee2ed"
+  },
   "kernelspec": {
    "display_name": "ironhack",
    "language": "python",
-   "name": "ironhack"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -96,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
