--- a/Lab-Pandas-II.ipynb
+++ b/Lab-Pandas-II.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "id": "00add67f",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,9 @@
     "\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.float_format', lambda x: '%.2f' % x)"
+    "pd.set_option('display.float_format', lambda x: '%.2f' % x)\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -210,78 +212,6 @@
        "      <td>5328</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>84.00</td>\n",
-       "      <td>169</td>\n",
-       "      <td>39</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>36</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>230</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>33.00</td>\n",
-       "      <td>25724</td>\n",
-       "      <td>3934</td>\n",
-       "      <td>2464</td>\n",
-       "      <td>18189</td>\n",
-       "      <td>2520</td>\n",
-       "      <td>10784</td>\n",
-       "      <td>974</td>\n",
-       "      <td>16802</td>\n",
-       "      <td>11752</td>\n",
-       "      <td>2069</td>\n",
-       "      <td>12783</td>\n",
-       "      <td>211</td>\n",
-       "      <td>12936</td>\n",
-       "      <td>433</td>\n",
-       "      <td>3015</td>\n",
-       "      <td>1143</td>\n",
-       "      <td>267</td>\n",
-       "      <td>246</td>\n",
-       "      <td>8971</td>\n",
-       "      <td>5666</td>\n",
-       "      <td>2906</td>\n",
-       "      <td>12791</td>\n",
-       "      <td>513</td>\n",
-       "      <td>793</td>\n",
-       "      <td>80</td>\n",
-       "      <td>9253</td>\n",
-       "      <td>114</td>\n",
-       "      <td>1928</td>\n",
-       "      <td>16</td>\n",
-       "      <td>4033</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -291,71 +221,51 @@
        "0  Afghanistan          2201.00                    61995   \n",
        "1      Albania          1181.00                    12904   \n",
        "2      Algeria          2762.00                    97931   \n",
-       "3      Andorra            84.00                      169   \n",
-       "4       Angola            33.00                    25724   \n",
        "\n",
        "   Respiratory diseases   Kidney diseases  Neonatal disorders   Meningitis   \\\n",
        "0                   7082             5637                23701         1563   \n",
        "1                    815              329                  161           13   \n",
        "2                   7528             8201                 8756          292   \n",
-       "3                     39               16                    0            0   \n",
-       "4                   3934             2464                18189         2520   \n",
        "\n",
        "   Malaria   Interpersonal violence  HIV/AIDS  Tuberculosis  \\\n",
        "0       530                    5015       318          3627   \n",
        "1         0                      57         2            11   \n",
        "2         0                     459       264           445   \n",
-       "3         0                       0         3             0   \n",
-       "4     10784                     974     16802         11752   \n",
        "\n",
        "   Maternal disorders  Lower respiratory infections  Alcohol use disorders  \\\n",
        "0                4038                         18697                    147   \n",
        "1                   3                           457                     18   \n",
        "2                 638                          5786                    111   \n",
-       "3                   0                            20                      1   \n",
-       "4                2069                         12783                    211   \n",
        "\n",
        "   Diarrheal diseases  Poisoning  Nutritional deficiencies  \\\n",
        "0                4320        525                      1244   \n",
        "1                   7         11                         5   \n",
        "2                 527        351                       114   \n",
-       "3                   1          0                         0   \n",
-       "4               12936        433                      3015   \n",
        "\n",
        "    Alzheimer's disease  Parkinson's disease   Acute hepatitis  \\\n",
        "0                  1775                  560              1940   \n",
        "1                   917                  248                 1   \n",
        "2                  5209                 1283               259   \n",
-       "3                    36                    7                 1   \n",
-       "4                  1143                  267               246   \n",
        "\n",
        "   Digestive diseases   Cirrhosis and other chronic liver diseases  \\\n",
        "0                6929                                         3797   \n",
        "1                 527                                          333   \n",
        "2                6398                                         4045   \n",
-       "3                  27                                           12   \n",
-       "4                8971                                         5666   \n",
        "\n",
        "   Protein-energy malnutrition  Neoplasms  Fire, heat  Drowning  \\\n",
        "0                         1210      21247         485      1687   \n",
        "1                            3       4705          18        36   \n",
        "2                           92      23816         782       526   \n",
-       "3                            0        230           0         0   \n",
-       "4                         2906      12791         513       793   \n",
        "\n",
        "   Drug use disorders  Road injuries  Environmental heat and cold exposure  \\\n",
        "0                 406           8254                                    59   \n",
        "1                  29            243                                     4   \n",
        "2                 526          11051                                    40   \n",
-       "3                   0              8                                     0   \n",
-       "4                  80           9253                                   114   \n",
        "\n",
        "   Self-harm   Conflict and terrorism  Diabetes   Unnamed: 32  \n",
        "0       1613                    24295       4817          NaN  \n",
        "1        152                        0        175          NaN  \n",
-       "2       1515                       13       5328          NaN  \n",
-       "3          8                        0          9          NaN  \n",
-       "4       1928                       16       4033          NaN  "
+       "2       1515                       13       5328          NaN  "
       ]
      },
      "execution_count": 3,
@@ -365,7 +275,7 @@
    ],
    "source": [
     "# muestra dataframe\n",
-    "df.head(5)"
+    "df.head(3)"
    ]
   },
   {
@@ -636,39 +546,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>Mali</td>\n",
-       "      <td>271.00</td>\n",
-       "      <td>19519</td>\n",
-       "      <td>4574</td>\n",
-       "      <td>2698</td>\n",
-       "      <td>32006</td>\n",
-       "      <td>6260</td>\n",
-       "      <td>18000</td>\n",
-       "      <td>2315</td>\n",
-       "      <td>4496</td>\n",
-       "      <td>5638</td>\n",
-       "      <td>3520</td>\n",
-       "      <td>15184</td>\n",
-       "      <td>100</td>\n",
-       "      <td>13882</td>\n",
-       "      <td>565</td>\n",
-       "      <td>14865</td>\n",
-       "      <td>1226</td>\n",
-       "      <td>325</td>\n",
-       "      <td>411</td>\n",
-       "      <td>6246</td>\n",
-       "      <td>3267</td>\n",
-       "      <td>14535</td>\n",
-       "      <td>9336</td>\n",
-       "      <td>759</td>\n",
-       "      <td>993</td>\n",
-       "      <td>19</td>\n",
-       "      <td>2757</td>\n",
+       "      <th>183</th>\n",
+       "      <td>Uruguay</td>\n",
+       "      <td>193.00</td>\n",
+       "      <td>10003</td>\n",
+       "      <td>2155</td>\n",
+       "      <td>989</td>\n",
+       "      <td>148</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>212</td>\n",
+       "      <td>177</td>\n",
+       "      <td>56</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1595</td>\n",
+       "      <td>111</td>\n",
+       "      <td>165</td>\n",
+       "      <td>16</td>\n",
        "      <td>134</td>\n",
-       "      <td>947</td>\n",
-       "      <td>1170</td>\n",
-       "      <td>2755</td>\n",
+       "      <td>1497</td>\n",
+       "      <td>349</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1546</td>\n",
+       "      <td>471</td>\n",
+       "      <td>104</td>\n",
+       "      <td>10084</td>\n",
+       "      <td>67</td>\n",
+       "      <td>71</td>\n",
+       "      <td>15</td>\n",
+       "      <td>560</td>\n",
+       "      <td>6</td>\n",
+       "      <td>666</td>\n",
+       "      <td>0</td>\n",
+       "      <td>895</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -676,34 +586,34 @@
       ],
       "text/plain": [
        "    country_name  covid-19_deaths  cardiovascular_diseases  \\\n",
-       "100         Mali           271.00                    19519   \n",
+       "183      Uruguay           193.00                    10003   \n",
        "\n",
        "     respiratory_diseases  kidney_diseases  neonatal_disorders  meningitis  \\\n",
-       "100                  4574             2698               32006        6260   \n",
+       "183                  2155              989                 148          14   \n",
        "\n",
        "     malaria  interpersonal_violence  hiv/aids  tuberculosis  \\\n",
-       "100    18000                    2315      4496          5638   \n",
+       "183        0                     212       177            56   \n",
        "\n",
        "     maternal_disorders  lower_respiratory_infections  alcohol_use_disorders  \\\n",
-       "100                3520                         15184                    100   \n",
+       "183                  10                          1595                    111   \n",
        "\n",
        "     diarrheal_diseases  poisoning  nutritional_deficiencies  \\\n",
-       "100               13882        565                     14865   \n",
+       "183                 165         16                       134   \n",
        "\n",
        "     alzheimer's_disease  parkinson's_disease  acute_hepatitis  \\\n",
-       "100                 1226                  325              411   \n",
+       "183                 1497                  349                1   \n",
        "\n",
        "     digestive_diseases  cirrhosis_and_other_chronic_liver_diseases  \\\n",
-       "100                6246                                        3267   \n",
+       "183                1546                                         471   \n",
        "\n",
        "     protein-energy_malnutrition  neoplasms  fire,_heat  drowning  \\\n",
-       "100                        14535       9336         759       993   \n",
+       "183                          104      10084          67        71   \n",
        "\n",
        "     drug_use_disorders  road_injuries  environmental_heat_and_cold_exposure  \\\n",
-       "100                  19           2757                                   134   \n",
+       "183                  15            560                                     6   \n",
        "\n",
        "     self-harm  conflict_and_terrorism  diabetes  \n",
-       "100        947                    1170      2755  "
+       "183        666                       0       895  "
       ]
      },
      "execution_count": 8,
@@ -992,16 +902,7 @@
    "execution_count": 11,
    "id": "cf1439eb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_327/2178779309.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-      "  df['total_muertes'] = df.sum(axis= 1) # nueva columna : 'Total de muertes'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['total_muertes'] = df.sum(axis= 1) # nueva columna : 'Total de muertes'"
    ]
@@ -2385,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "86755dd8",
    "metadata": {},
    "outputs": [
@@ -2661,7 +2562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "b9a95df9",
    "metadata": {},
    "outputs": [
@@ -2690,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "aed07825",
    "metadata": {},
    "outputs": [
@@ -2965,7 +2866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "b4763077",
    "metadata": {},
    "outputs": [
@@ -4849,12 +4750,12 @@
    ],
    "source": [
     "correlacion = df.iloc[ : , :-1].corr()\n",
-    "display(correlacion)"
+    "display(correlacion)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "1ce24e78",
    "metadata": {},
    "outputs": [
@@ -4895,7 +4796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "9da7eb9b",
    "metadata": {},
    "outputs": [
@@ -4915,7 +4816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "id": "57d03ffc",
    "metadata": {},
    "outputs": [
@@ -5159,7 +5060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "id": "73de2c04",
    "metadata": {},
    "outputs": [
@@ -5289,7 +5190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 21,
    "id": "2f7a600d",
    "metadata": {},
    "outputs": [
