intento de update 2

--- a/Lab-Pandas-II.ipynb
+++ b/Lab-Pandas-II.ipynb
@@ -24,6 +24,8 @@
     "import datetime\n",
     "from pydataset import data\n",
     "\n",
+    "#import que vayamos a utilizar. \n",
+    "\n",
     "pd.options.display.max_columns = None\n",
     "#me voy a pillar una database que encontré en línea de la trend del DOW Jones y no de pydataset\n",
     "\n",
@@ -32,79 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ba3dd59e",
+   "execution_count": null,
+   "id": "16a01d09",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Company</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>YTD Change</th>\n",
-       "      <th>Volume * Price</th>\n",
-       "      <th>Total Employees</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MMMÊ3M</td>\n",
-       "      <td>Ê$202.92</td>\n",
-       "      <td>991,291</td>\n",
-       "      <td>13.64%</td>\n",
-       "      <td>Ê$201,152,769.72</td>\n",
-       "      <td>89,800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AXPÊAmerican Express</td>\n",
-       "      <td>Ê$85.42</td>\n",
-       "      <td>2,779,385</td>\n",
-       "      <td>15.31%</td>\n",
-       "      <td>Ê$237,415,066.70</td>\n",
-       "      <td>62,500</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Company     Price     Volume YTD Change    Volume * Price  \\\n",
-       "0                MMMÊ3M  Ê$202.92    991,291     13.64%  Ê$201,152,769.72   \n",
-       "1  AXPÊAmerican Express   Ê$85.42  2,779,385     15.31%  Ê$237,415,066.70   \n",
-       "\n",
-       "  Total Employees  \n",
-       "0          89,800  \n",
-       "1          62,500  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_dow = pd.read_csv('dowjones.csv',encoding='latin-1')\n",
+    "df_dow = pd.read_csv('dowjones.csv',encoding='latin-1') #importante para español!\n",
     "df_dow.head(2)"
    ]
   },
@@ -1006,7 +941,7 @@
     "#me interesa como es el precio del stock PY para eso, uso el YTD Change y el Price, para obtener el PY Price.\n",
     "\n",
     "#pero ojo, el YTD change ni el Price son numeros qu se puedan jugar con ellos. \n",
-    "print(df_dowJ.dtypes)\n"
+    "print(df_dowJ.dtypes)"
    ]
   },
   {
@@ -2100,12 +2035,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1cd0f37",
+   "cell_type": "markdown",
+   "id": "9bb30601",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#PARA cambiar columna \n",
+    "\n",
+    "#df_dowJ = dj_dowJ.astype({'nombre columna':'str'}) #dato que necesitas transormar"
+   ]
   }
  ],
  "metadata": {
